--- a/app/src/main/res/layout/tutorial_slide3.xml
+++ b/app/src/main/res/layout/tutorial_slide3.xml
@@ -20,6 +20,12 @@
             android:textSize="@dimen/slide_title"
             android:textStyle="bold" />
 
+        <ImageView
+            android:layout_width="@dimen/img_width_height"
+            android:layout_height="@dimen/img_width_height"
+            android:background="@drawable/ic_splash"
+            />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -31,13 +37,6 @@
             android:textColor="@android:color/white"
             android:textSize="@dimen/slide_desc" />
 
-        <ImageView
-            android:layout_width="215dp"
-            android:layout_height="90dp"
-            android:layout_marginTop="10dp"
-            android:layout_gravity="center"
-            android:background="@drawable/tutorial_update"/>
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -48,13 +47,6 @@
             android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textSize="@dimen/slide_desc" />
-
-        <ImageView
-            android:layout_width="215dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="10dp"
-            android:layout_gravity="center"
-            android:background="@drawable/tutorial_master"/>
 
         <TextView
             android:layout_width="wrap_content"
