--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -34,7 +34,7 @@
             android:text="@string/app_name"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textColor="@color/colorPrimary"
-            android:textSize="18sp" />
+            android:textSize="18dp" />
 
     </RelativeLayout>
 
