--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -13,26 +13,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        tools:context="org.secuso.privacyfriendlyexample.HelpActivity">
+        tools:context="org.secuso.privacyfriendlypasswordgenerator.HelpActivity">
 
         <include layout="@layout/toolbar"/>
 
-        <LinearLayout
-            android:id="@+id/main_content"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/white"
-            android:fitsSystemWindows="true"
-            android:layout_marginTop="?attr/actionBarSize"
-            android:orientation="vertical"
-            tools:context=".activities.HelpActivity"
-            android:weightSum="1">
-            <fragment android:name="org.secuso.privacyfriendlypasswordgenerator.activities.HelpActivity$HelpFragment"
-                android:id="@+id/help_fragment"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-
-        </LinearLayout>
+        <include layout="@layout/content_help" />
 
     </android.support.design.widget.CoordinatorLayout>
 
