Button for master password visibility for generation added

--- a/app/src/main/res/layout/dialog_generate_password.xml
+++ b/app/src/main/res/layout/dialog_generate_password.xml
@@ -79,11 +79,26 @@
             android:layout_marginTop="15dp"
             android:text="@string/master_password_heading" />
 
-        <EditText
-            android:id="@+id/editTextMasterpassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword" />
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/editTextMasterpassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:layout_toStartOf="@+id/visibilityButton" />
+
+            <ImageButton
+                android:id="@+id/visibilityButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ic_visibility"
+                android:layout_centerVertical="true"
+                android:layout_alignParentEnd="true" />
+
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/textViewMPasswordHeading"
