--- a/app/src/main/res/layout-sw720dp/dialog_update_metadata.xml
+++ b/app/src/main/res/layout-sw720dp/dialog_update_metadata.xml
@@ -100,8 +100,7 @@
         android:id="@+id/seekBarLengthUpdate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:max="16"
-        android:progress="6" />
+        android:max="21"/>
 
     <TextView
         android:layout_width="match_parent"
