--- a/app/src/main/res/layout/dialog_add_metadata.xml
+++ b/app/src/main/res/layout/dialog_add_metadata.xml
@@ -20,9 +20,9 @@
                 android:id="@+id/editTextDomain"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text|textEmailAddress"
                 android:hint="@string/domain"
-                android:imeOptions="actionNext" />
+                android:imeOptions="actionNext"
+                android:inputType="text|textEmailAddress" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -34,9 +34,9 @@
                 android:id="@+id/editTextUsername"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text|textEmailAddress"
                 android:hint="@string/username_optional"
-                android:imeOptions="actionNext" />
+                android:imeOptions="actionNext"
+                android:inputType="text|textEmailAddress" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -115,35 +115,56 @@
             android:max="21"
             android:progress="6" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="16dp"
+            android:background="#d3d3d3" />
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/versionButton"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="▶ Change Version"
+                android:textColor="#d3d3d3"
+                android:textAllCaps="false" />
+
+            <ImageButton
+                android:id="@+id/versionInfoImageButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/ic_menu_info" />
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/versionDataLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <TextView
                 android:id="@+id/textViewIterationHeading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/iteration" />
+                android:text="CURRENT PASSWORD VERSION" />
 
             <EditText
                 android:id="@+id/EditTextIteration"
-                android:layout_width="50dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_toEndOf="@+id/textViewIterationHeading"
                 android:inputType="number"
                 android:maxLength="4" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_toEndOf="@+id/EditTextIteration"
-                android:text="@string/hint_iteration"
-                android:textSize="12sp" />
-
-        </RelativeLayout>
+        </LinearLayout>
 
     </LinearLayout>
 </ScrollView>
