--- a/app/src/main/res/layout/dialog_update_metadata.xml
+++ b/app/src/main/res/layout/dialog_update_metadata.xml
@@ -155,7 +155,7 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="16dp"
                 android:layout_toEndOf="@+id/textViewIterationHeading"
-                android:text="1" />
+                android:text="N/A"/>
 
             <TextView
                 android:id="@+id/textViewIterationNew"
@@ -169,7 +169,7 @@
 
             <EditText
                 android:id="@+id/EditTextIteration"
-                android:layout_width="50dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:layout_toEndOf="@+id/textViewIterationNew"
