--- a/app/src/main/res/layout/dialog_add_metadata.xml
+++ b/app/src/main/res/layout/dialog_add_metadata.xml
@@ -130,7 +130,7 @@
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="▶ Change Version"
+                android:text="@string/change_version_closed"
                 android:textColor="#d3d3d3"
                 android:textAllCaps="false" />
 
@@ -155,7 +155,7 @@
                 android:id="@+id/textViewIterationHeading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="CURRENT PASSWORD VERSION" />
+                android:text="@string/current_version" />
 
             <EditText
                 android:id="@+id/EditTextIteration"
