--- a/app/src/main/res/layout/dialog_update_metadata.xml
+++ b/app/src/main/res/layout/dialog_update_metadata.xml
@@ -121,9 +121,9 @@
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="▶ Change Version"
-                android:textColor="#d3d3d3"
-                android:textAllCaps="false" />
+                android:text="@string/change_version_closed"
+                android:textAllCaps="false"
+                android:textColor="#d3d3d3" />
 
             <ImageButton
                 android:id="@+id/versionInfoImageButton"
@@ -139,9 +139,8 @@
             android:id="@+id/textViewIteration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:text="@string/old_version"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
         <RelativeLayout
             android:id="@+id/updateVersionLayout"
