--- a/app/src/main/res/layout-sw600dp/dialog_update_metadata.xml
+++ b/app/src/main/res/layout-sw600dp/dialog_update_metadata.xml
@@ -102,11 +102,65 @@
         android:layout_height="wrap_content"
         android:max="21"/>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="16dp"
+        android:background="#d3d3d3" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/versionButton"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/change_version_closed"
+            android:textAllCaps="false"
+            android:textColor="#d3d3d3" />
+
+        <ImageButton
+            android:id="@+id/versionInfoImageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/ic_menu_info" />
+
+    </RelativeLayout>
+
     <TextView
+        android:id="@+id/textViewIteration"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/old_version"
+        android:visibility="gone" />
+
+    <RelativeLayout
+        android:id="@+id/updateVersionLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/counter_update"
-        android:textSize="12sp"
-        android:layout_marginTop="16dp"/>
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/textViewNewIterationHeading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/new_version" />
+
+        <EditText
+            android:id="@+id/EditTextIteration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_toEndOf="@+id/textViewNewIterationHeading"
+            android:inputType="number"
+            android:maxLength="4" />
+
+    </RelativeLayout>
+
 
 </LinearLayout>
