Adding page character set heading update

--- a/app/src/main/res/layout/dialog_add_metadata.xml
+++ b/app/src/main/res/layout/dialog_add_metadata.xml
@@ -45,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/characterset" />
+            android:text="@string/characterset_add" />
 
         <GridLayout
             android:layout_width="wrap_content"
