Master password should be invisible to the accessibility services for security reasons

--- a/app/src/main/res/layout/dialog_generate_password.xml
+++ b/app/src/main/res/layout/dialog_generate_password.xml
@@ -88,7 +88,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                android:layout_toStartOf="@+id/visibilityButton" />
+                android:layout_toStartOf="@+id/visibilityButton"
+                android:importantForAccessibility="no" />
 
             <ImageButton
                 android:id="@+id/visibilityButton"
