Added adaptive icon. Added backup integration to Backup App. Fixes #35 Version increase to 1.1.0 Migrated to androidx Gradle v6.5 Fixed bug with database not closing.

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,7 +11,7 @@
     tools:context="org.secuso.privacyfriendlypasswordgenerator.activities.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
